Upload docs to gh-pages

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,8 @@ script:
   - cargo doc
 after_success: |
   [ $TRAVIS_BRANCH = master ] &&
-  mv target/doc . &&
-  curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
+  [ $TRAVIS_PULL_REQUEST = false ] &&
+  echo '<meta http-equiv=refresh content=0;url=taskpipe/index.html>' > target/doc/index.html &&
+  sudo pip install ghp-import &&
+  ghp-import -n target/doc &&
+  git push -fq https://${TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git gh-pages
